<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.media.MediaFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginEnd="@dimen/space_large">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/title_media"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubtitleWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_media_fragment"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginBottom="@dimen/space_medium"
                app:layout_constraintTop_toBottomOf="@+id/appbar"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clCardSelected"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/dimen_55dp"
                android:background="@drawable/border_yellow_corner"
                app:layout_constraintTop_toBottomOf="@+id/tvSubtitleWelcome"
                app:layout_constraintStart_toStartOf="parent">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llContentSelectImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_placeholder_image"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/gray_400"
                        android:text="@string/select_image_media_fragment"/>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivImageLoaded"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/line_spacing"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animationUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="gone"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/uploading" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clDivisor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_extra_large"
                app:layout_constraintTop_toBottomOf="@+id/clCardSelected"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvOr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/gray_400"
                    android:text="@string/or_media_fragment"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/gray_400"
                    android:layout_marginEnd="@dimen/margin_default"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvOr"
                    app:layout_constraintStart_toStartOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/gray_400"
                    android:layout_marginStart="@dimen/margin_default"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvOr"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTakePicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_camera_media_fragment"
                style="@style/Button.IconStyle.Secondary"
                app:icon="@drawable/ic_camera_alt_24"
                android:layout_marginTop="@dimen/space_extra_large"
                app:layout_constraintTop_toBottomOf="@+id/clDivisor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_400"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginBottom="@dimen/space_medium"
        app:layout_constraintBottom_toTopOf="@+id/btnUpload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpload"
        style="@style/Button.IconStyle.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/upload_media_fragment"
        android:layout_marginStart="@dimen/space_large"
        android:layout_marginBottom="@dimen/space_extra_large"
        android:layout_marginEnd="@dimen/space_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
